[tool.poetry]
name = "grit"
version = "0.0.1a"
description = "Exception handling context manager."
authors = ["Gabriel Gore <gabriel59kg@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-icdiff = "^0.5"
invoke = "^1.7.1"
black = "^22.3.0"
isort = "^5.10.1"
pylint = "^2.14.2"
mypy = "^0.961"
types-invoke = "^1.6.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=grit --cov-report term --doctest-glob=*.md"
log_cli_level = "info"

[tool.isort]
known_first_party = "grit"
profile = "black"
skip_gitignore = true
